--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -10,13 +10,13 @@
             <a class="nav-link active" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="" routerLinkActive="active-link">Bookings</a>
+            <a class="nav-link" routerLink="bookings" routerLinkActive="active-link">Bookings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="" routerLinkActive="active-link">About</a>
+            <a class="nav-link" routerLink="about" routerLinkActive="active-link">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="" routerLinkActive="active-link">ContactUs</a>
+            <a class="nav-link" routerLink="contact" routerLinkActive="active-link">ContactUs</a>
           </li>
         </ul>
       </div>
