--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -5,7 +5,7 @@
         </div>
             <div class="col-lg-4 mt-3 mb-3">
                 <a routerLink="">Home</a>
-                <a routerLink="menu">Menu</a>
+                <a routerLink="bookings">Booking</a>
                 <a routerLink="about">About</a>
                 <a routerLink="contact">Contact</a>
             </div>
