--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,54 @@
-<div class="banner">
-    <h1>
-        <br>
-        Come! Take a ride with us
-    </h1>
-</div>
+
+ <div class="banner">
+    <div class="content">
+        <h1 class="mb-5">Come take a ride with us</h1>
+        <a routerLink="menu">BOOK NOW <i class="bi bi-arrow-right"></i></a>
+    </div>
+    
+ </div>
+
+ <div class="col-md-7 padding70 bg-yellow">
+  <form>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="btn-group bootstrap-select input-group-btn form-control dropup">
+          <div class="btn-group" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle btn-default bs-placeholder btn-default-custom" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Select Vehicle
+            </button>
+            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+              <a class="dropdown-item" href="#">Car</a>
+              <a class="dropdown-item" href="#">Auto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="btn-group bootstrap-select input-group-btn form-control dropup">
+          <div class="btn-group" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle btn-default bs-placeholder btn-default-custom" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Passengerse
+            </button>
+            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+              <a class="dropdown-item" href="#">1</a>
+              <a class="dropdown-item" href="#">2</a>
+              <a class="dropdown-item" href="#">3</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="btn-group bootstrap-select input-group-btn form-control dropup">
+          <input type="text" name="" class="form-input" placeholder="Pickup location">
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="btn-group bootstrap-select input-group-btn form-control dropup">
+          <input type="text" name="" class="form-input " placeholder="Date and Time">
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="btn-group bootstrap-select input-group-btn form-control dropup">
+          <input type="text" name="" class="form-input " placeholder="Drop Location">
+        </div>
+      </div>
