--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,27 +13,39 @@
       <div class="col-sm-6">
         <div class="btn-group bootstrap-select input-group-btn form-control dropup">
           <div class="btn-group" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle btn-default bs-placeholder btn-default-custom" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <select>
+              <option value="0">Select Vehicle</option>
+              <option>Car</option>
+              <option>Auto</option>
+            </select>
+            <!-- <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle btn-default bs-placeholder btn-default-custom" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Select Vehicle
-            </button>
-            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            </button> -->
+            <!-- <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
               <a class="dropdown-item" href="#">Car</a>
               <a class="dropdown-item" href="#">Auto</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
       <div class="col-sm-6">
         <div class="btn-group bootstrap-select input-group-btn form-control dropup">
           <div class="btn-group" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle btn-default bs-placeholder btn-default-custom" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <select>
+              <option value="0">Passengers</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <!-- <option></option> -->
+            </select>
+            <!-- <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle btn-default bs-placeholder btn-default-custom" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Passengerse
             </button>
             <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
               <a class="dropdown-item" href="#">1</a>
               <a class="dropdown-item" href="#">2</a>
               <a class="dropdown-item" href="#">3</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
