--- a/src/app/sharepage/navbar/navbar.component.css
+++ b/src/app/sharepage/navbar/navbar.component.css
@@ -2,4 +2,23 @@
 {
     color: #c04848;
     font-weight: bold;
+    
+}
+.nav-link {
+    display: block;
+    padding: 0.5rem 1rem;
+    color: #f8f9fa;
+    text-decoration: none;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+    font-weight: 600;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+a {
+    color: #f8f9fa;
+    font-weight: 600;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
